<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:baselineAligned="false"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/txtInputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bemenet" />

        <TextView
            android:id="@+id/txtOutputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kimenet" />

        <Switch
            android:id="@+id/switchEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/akt_v"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:enabled="true"
            android:text="@string/torles" />

</LinearLayout>
