<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="150dp"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iot_android"
        android:textSize="30sp"
        android:textAlignment="center"
        android:paddingBottom="30dp" />

    <!-- Input Rows -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input1"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/input1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input2"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/input2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input3"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/input3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input4"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/input4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input5txt"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/input5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input6txt"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/input6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Output Buttons -->
    <Button
        android:id="@+id/output1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output1"
        android:layout_marginTop="32dp"
        tools:ignore="VisualLintButtonSize"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/output2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output2"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/output3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output3"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/output4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output4"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true"/>

    <Switch
        android:id="@+id/switch_automation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:checked="false"
        android:text="Manuális"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="20sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</LinearLayout>
